Positioner: Try converting folderModelData after perStripe change

If we have never-before seen resolution, we can try to convert
the current icon positions to the new one.

This is not perfect, but it tries it's best.
If the user has arranged icons for this resolution already,
the conversion will be skipped.

BUG: 500868